--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       # Edit this to your machine's local ip address
       # This is a temporary solution, another solution is to use "kafka" as host name
       # and edit the /etc/hosts file: 127.0.0.1   kafka
-      KAFKA_ADVERTISED_HOST_NAME: 192.168.0.18
+      HOSTNAME_COMMAND: "route -n | awk '/UG[ \t]/{print $$2}'"
     depends_on:
       - zookeeper
 
